fix error overflow-x mobile v2

--- a/styles.css
+++ b/styles.css
@@ -1454,7 +1454,7 @@ html.dark #story {
 
 /* Mobile */
 @media (max-width: 768px) {
-  body{
+  html, body{
     overflow-x: hidden;
   }
 
